fixtures/parser/valid/php85/pipe_operator.php
<?php
echo "hello" |> strtoupper(...);
echo $value |> trim(...) |> strlen(...);
