fixtures/parser/invalid/pipe_operator_invalid.php
<?php
// invalid: pipe operator is missing a right-hand expression
echo $value |>;
